finally found the problem with the archive table, data inside was too long and word wrap was not on. issue has been resolved. merging new branch with master for deployment

--- a/client/src/routes/ActiveRepairs.module.css
+++ b/client/src/routes/ActiveRepairs.module.css
@@ -58,6 +58,6 @@
   }
   .activeTable tbody tr td {
     font-size: 1.2rem;
-    padding: 0.2rem;
+    padding: 0 0.2rem;
   }
 }
