--- a/client/src/routes/InventoryList.module.css
+++ b/client/src/routes/InventoryList.module.css
@@ -55,6 +55,6 @@
   }
   .inventoryTable tbody tr td {
     font-size: 1.2rem;
-    padding: 0.2rem;
+    padding: 0 0.2rem;
   }
 }
